# bible-search

./: .gitignore  Cargo.toml  README.md  synonyms.txt
src/: bible.rs  json_parser.rs  main.rs  synonyms.rs
src/json/: README.md  README_json.md  bible.json  claude.rs  claude_json.rs
