[package]
name = "bible_tool"
version = "2.0.0"
edition = "2021"
authors = ["Ryan McCoppin <rrmhearts@gmail.com>"]
description = "Enhanced Bible search tool with synonym support and command line interface"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4.0"
colored = "2"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "bible_tool"
path = "src/main.rs"