[package]
name = "bible_tool"
version = "2.0.2"
edition = "2021"
authors = ["Ryan McCoppin <rrmhearts@gmail.com>"]
description = "Enhanced Bible search tool with synonym support and command line interface"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
colored = "2.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "bible_tool"
path = "src/main.rs"